Java 9 compatibility improvements (#8171)
* Using non-deprecated valueOf

Constructors for boxing types were mostly deprecated. For example:

http://download.java.net/java/jdk9/docs/api/java/lang/Integer.html#Integer-int-

* Remove uses os deprecated Class.newInstance

See http://download.java.net/java/jdk9/docs/api/java/lang/Class.html#newInstance--

* Exception check compatible with Java 8 and 9

In Java 8 we get a java.net.SocketException but in Java 9
we got a more specific javax.net.ssl.SSLException with a
SocketException as the cause.

* Fix ambiguous call to putAll

See https://github.com/scala/bug/issues/10418