@@ -6,6 +6,7 @@ package play.data.validation;
 
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorFactory;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Supplier;
@@ -65,8 +66,12 @@ public class MappedConstraintValidatorFactory implements ConstraintValidatorFact
   // need to do so.
   private <T extends ConstraintValidator<?, ?>> T newInstance(Class<T> key) {
     try {
-      return key.newInstance();
-    } catch (InstantiationException | RuntimeException | IllegalAccessException ex) {
+      return key.getDeclaredConstructor().newInstance();
+    } catch (InstantiationException
+        | RuntimeException
+        | IllegalAccessException
+        | NoSuchMethodException
+        | InvocationTargetException ex) {
       throw new RuntimeException(ex);
     }
   }
